@@ -67,11 +67,13 @@ src/names.o:src/buffer.h
 src/names.o:src/config.h
 src/names.o:src/instance_client.h
 src/names.o:src/names.h
+src/nss_client.o:src/options.h
 src/nss_client.o:src/buffer.h
 src/nss_client.o:src/command.h
 src/nss_client.o:src/config.h
 src/nss_client.o:src/list.h
 src/nss_client.o:src/names.h
+src/nss_server.o:src/options.h
 src/nss_server.o:src/buffer.h
 src/nss_server.o:src/command.h
 src/nss_server.o:src/config.h
@@ -155,6 +157,7 @@ src/operations_rfs.o:src/list.h
 src/operations_rfs.o:src/nss_server.h
 src/operations_rfs.o:src/operations.h
 src/operations_rfs.o:src/operations_rfs.h
+src/operations_rfs.o:src/options.h
 src/operations_rfs.o:src/resume.h
 src/operations_rfs.o:src/scheduling.h
 src/operations_rfs.o:src/sendrecv.h
@@ -276,6 +279,7 @@ src/server_handlers_read.o:src/buffer.h
 src/server_handlers_read.o:src/command.h
 src/server_handlers_read.o:src/config.h
 src/server_handlers_read.o:src/instance_server.h
+src/server_handlers_read.o:src/options.h
 src/server_handlers_read.o:src/sendrecv.h
 src/server_handlers_read.o:src/server.h
 src/server_handlers_rfs.o:src/buffer.h
