@@ -27,6 +27,7 @@
 + new packaging for Gentoo using /etc/conf.d/
   + full build options support including ugo, ipv6, ssl, exports list
 - WITH_SCHEDULING should be available for Mac only
++ rfs_nss should be available only for Linux/SunOS/FreeBSD
 - packaging for rfs_nss
 
 bugs:
