@@ -6,7 +6,9 @@ This program can be distributed under the terms of the GNU GPL.
 See the file LICENSE.
 */
 
-#ifdef WITH_UGO
+#include "options.h"
+
+#if defined RFSNSS_AVAILABLE
 
 #include <unistd.h>
 #include <errno.h>
@@ -393,5 +395,5 @@ unsigned is_nss_running(struct rfs_instance *instance)
 
 #else
 int nss_server_c_empty_module_makes_suncc_upset = 0;
-#endif /* WITH_UGO */
+#endif /* RFSNSS_AVAILABLE */
 
