@@ -6,7 +6,9 @@ This program can be distributed under the terms of the GNU GPL.
 See the file LICENSE.
 */
 
-#ifdef WITH_UGO
+#include "options.h"
+
+#if defined RFSNSS_AVAILABLE
 
 #ifndef NSS_SERVER_H
 #define NSS_SERVER_H
@@ -29,5 +31,5 @@ unsigned is_nss_running(struct rfs_instance *instance);
 
 #endif /* NSS_SERVER_H */
 
-#endif /* WITH_UGO */
+#endif /* RFSNSS_AVAILABLE */
 
