@@ -3,6 +3,7 @@
 [+] IPv6 is enabled by default
 [+] links support is updated and enabled by default
 [+] server's exports list is enabled by default
+[+] added -4 and -6 options to force rfs use IPv4/IPv6 connections 
 
 [*] remotefs may be built without UGO support
 [*] fixed segfault if certificate file(s) isn't exist
@@ -12,8 +13,12 @@
 [*] files locking update
 [*] fixed buf with files size for du and ls
 [*] fixed bug with number of hardlinks
+[*] fixed wrong timestamps with cp -p
+[*] fixed copying of file with mode 444
 
 rfsd:
+
+[+] added -4 and -6 option to force rfsd listen to IPv4/IPv6 connections
 
 [*] fixed segfault if no users/ips are specified in export line
 [*] pid file correctly deleted if rfsd can't start
@@ -21,6 +26,7 @@ rfsd:
 [*] fixed memory leak in readdir()
 [*] fixed zombies spawning
 [*] rfsd will warn user if ran without root privileges
+[*] -g option declared deprecated (gid wil be set depending on -u)
 
 rfs:
 
@@ -28,8 +34,14 @@ rfs:
 
 [*] prefetch is disabled by default if SSL isn't used
 [*] removed -ordwr_cache option
+[*] removed -ord_cache option
 [*] fixed memory leak
 [*] fixed segfault on writing
+[*] filesystem name is set only if user didn't specify FUSE's -ofsname=
+
+rfs_nss:
+
+[+] initial release
 
 0.11
 
